-fix positioning (change orientation from right to left if windows size will be exceeded) -fix issue with overflow-y in combination with parameters maxHeight and subtitle -fix auto width if width is not defined

--- a/cacti/branches/main/include/css/cacti_dd_menu.css
+++ b/cacti/branches/main/include/css/cacti_dd_menu.css
@@ -2,8 +2,6 @@
 .cacti_dd_menu{
 	position: absolute;
 	z-index: 999;
-	min-width: 150px;
-	max-width: 150px;
 	background: #363636;
 	border: 1px solid #7F7F99;
 	padding: 2px;
@@ -77,8 +75,8 @@
 	display: none;
 	color: #c1c1c1;
 	border-top: 1px solid #7F7F99;
-	padding: 2px 2px;
-	margin-top: 2px;
+	margin-top: 1px;
+	margin-bottom: 1px;
 	overflow: hidden;
 }
 
